[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pension_simulator"
version = "0.0.1"
authors = [
  { name="Florent Vassaux" },
]
description = "A pension_simulator package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
]
